[gd_scene load_steps=9 format=2]

[ext_resource path="res://Inventory/Inventory.gd" type="Script" id=1]
[ext_resource path="res://Inventory/Slot.gd" type="Script" id=2]
[ext_resource path="res://resources/inventory/inventory_slot.png" type="Texture" id=3]
[ext_resource path="res://resources/inventory/inventory.png" type="Texture" id=4]
[ext_resource path="res://resources/fonts/Slapa/slapa_24.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/fonts/Slapa/slapa_16.tres" type="DynamicFont" id=6]
[ext_resource path="res://Inventory/PlayerLabel.gd" type="Script" id=7]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 38, 38 )
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="Inventory" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 448.0
margin_bottom = 576.0
texture = ExtResource( 4 )

[node name="Inventory" type="GridContainer" parent="."]
margin_left = 22.0
margin_top = 290.0
margin_right = 203.0
margin_bottom = 451.0
rect_scale = Vector2( 2, 2 )
custom_constants/vseparation = 5
custom_constants/hseparation = 3
columns = 9

[node name="Slot1" type="Panel" parent="Inventory"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot2" type="Panel" parent="Inventory"]
margin_left = 23.0
margin_right = 43.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot3" type="Panel" parent="Inventory"]
margin_left = 46.0
margin_right = 66.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot4" type="Panel" parent="Inventory"]
margin_left = 69.0
margin_right = 89.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot5" type="Panel" parent="Inventory"]
margin_left = 92.0
margin_right = 112.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot6" type="Panel" parent="Inventory"]
margin_left = 115.0
margin_right = 135.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot7" type="Panel" parent="Inventory"]
margin_left = 138.0
margin_right = 158.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot8" type="Panel" parent="Inventory"]
margin_left = 161.0
margin_right = 181.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot9" type="Panel" parent="Inventory"]
margin_left = 184.0
margin_right = 204.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot10" type="Panel" parent="Inventory"]
margin_top = 25.0
margin_right = 20.0
margin_bottom = 45.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot11" type="Panel" parent="Inventory"]
margin_left = 23.0
margin_top = 25.0
margin_right = 43.0
margin_bottom = 45.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot12" type="Panel" parent="Inventory"]
margin_left = 46.0
margin_top = 25.0
margin_right = 66.0
margin_bottom = 45.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot13" type="Panel" parent="Inventory"]
margin_left = 69.0
margin_top = 25.0
margin_right = 89.0
margin_bottom = 45.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot14" type="Panel" parent="Inventory"]
margin_left = 92.0
margin_top = 25.0
margin_right = 112.0
margin_bottom = 45.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot15" type="Panel" parent="Inventory"]
margin_left = 115.0
margin_top = 25.0
margin_right = 135.0
margin_bottom = 45.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot16" type="Panel" parent="Inventory"]
margin_left = 138.0
margin_top = 25.0
margin_right = 158.0
margin_bottom = 45.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot17" type="Panel" parent="Inventory"]
margin_left = 161.0
margin_top = 25.0
margin_right = 181.0
margin_bottom = 45.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot18" type="Panel" parent="Inventory"]
margin_left = 184.0
margin_top = 25.0
margin_right = 204.0
margin_bottom = 45.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot19" type="Panel" parent="Inventory"]
margin_top = 50.0
margin_right = 20.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot20" type="Panel" parent="Inventory"]
margin_left = 23.0
margin_top = 50.0
margin_right = 43.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot21" type="Panel" parent="Inventory"]
margin_left = 46.0
margin_top = 50.0
margin_right = 66.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot22" type="Panel" parent="Inventory"]
margin_left = 69.0
margin_top = 50.0
margin_right = 89.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot23" type="Panel" parent="Inventory"]
margin_left = 92.0
margin_top = 50.0
margin_right = 112.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot24" type="Panel" parent="Inventory"]
margin_left = 115.0
margin_top = 50.0
margin_right = 135.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot25" type="Panel" parent="Inventory"]
margin_left = 138.0
margin_top = 50.0
margin_right = 158.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot26" type="Panel" parent="Inventory"]
margin_left = 161.0
margin_top = 50.0
margin_right = 181.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot27" type="Panel" parent="Inventory"]
margin_left = 184.0
margin_top = 50.0
margin_right = 204.0
margin_bottom = 70.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot28" type="Panel" parent="Inventory"]
margin_top = 75.0
margin_right = 20.0
margin_bottom = 95.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot29" type="Panel" parent="Inventory"]
margin_left = 23.0
margin_top = 75.0
margin_right = 43.0
margin_bottom = 95.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot30" type="Panel" parent="Inventory"]
margin_left = 46.0
margin_top = 75.0
margin_right = 66.0
margin_bottom = 95.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot31" type="Panel" parent="Inventory"]
margin_left = 69.0
margin_top = 75.0
margin_right = 89.0
margin_bottom = 95.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot32" type="Panel" parent="Inventory"]
margin_left = 92.0
margin_top = 75.0
margin_right = 112.0
margin_bottom = 95.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Hotbar" type="GridContainer" parent="."]
margin_left = -87.0
margin_top = 298.0
margin_right = 125.0
margin_bottom = 338.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( -106, -215 )
custom_constants/hseparation = 3
columns = 9

[node name="Slot1" type="Panel" parent="Hotbar"]
margin_right = 20.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot2" type="Panel" parent="Hotbar"]
margin_left = 23.0
margin_right = 43.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot3" type="Panel" parent="Hotbar"]
margin_left = 46.0
margin_right = 66.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot4" type="Panel" parent="Hotbar"]
margin_left = 69.0
margin_right = 89.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot5" type="Panel" parent="Hotbar"]
margin_left = 92.0
margin_right = 112.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot6" type="Panel" parent="Hotbar"]
margin_left = 115.0
margin_right = 135.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot7" type="Panel" parent="Hotbar"]
margin_left = 138.0
margin_right = 158.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot8" type="Panel" parent="Hotbar"]
margin_left = 161.0
margin_right = 181.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Slot9" type="Panel" parent="Hotbar"]
margin_left = 184.0
margin_right = 204.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="HelmetSlot" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 217.0
margin_top = 105.0
margin_right = 255.0
margin_bottom = 143.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "The helmet icon is actually from the inventory background. Though the slot is technically marked as visible, its modulation has been adjusted to make it transparent"
}

[node name="ChestSlot" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 217.0
margin_top = 149.0
margin_right = 255.0
margin_bottom = 187.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "The chest icon is actually from the inventory background. Though the slot is technically marked as visible, its modulation has been adjusted to make it transparent"
}

[node name="LegsSlot" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 217.0
margin_top = 193.0
margin_right = 255.0
margin_bottom = 231.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "The pants icon is actually from the inventory background. Though the slot is technically marked as visible, its modulation has been adjusted to make it transparent"
}

[node name="AccessorySlot1" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 387.0
margin_top = 126.0
margin_right = 425.0
margin_bottom = 164.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "The necklace  icon is actually from the inventory background. Though the slot is technically marked as visible, its modulation has been adjusted to make it transparent"
}

[node name="AccessorySlot2" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 386.0
margin_top = 171.0
margin_right = 424.0
margin_bottom = 209.0
rect_min_size = Vector2( 20, 20 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "The ring icon is actually from the inventory background. Though the slot is technically marked as visible, its modulation has been adjusted to make it transparent"
}

[node name="StatsLabel" type="Label" parent="."]
margin_left = 5.0
margin_top = 63.0
margin_right = 189.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 198, 9 )
custom_colors/font_color = Color( 0.537255, 0.537255, 0.537255, 1 )
custom_fonts/font = ExtResource( 6 )
text = "stats"
align = 1
uppercase = true

[node name="ArmorLabel" type="Label" parent="."]
margin_left = 196.0
margin_top = 63.0
margin_right = 442.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.537255, 0.537255, 0.537255, 1 )
custom_fonts/font = ExtResource( 6 )
text = "armor"
align = 1
uppercase = true

[node name="InventoryLabel" type="Label" parent="."]
margin_left = 6.0
margin_top = 255.0
margin_right = 442.0
margin_bottom = 272.0
custom_colors/font_color = Color( 0.537255, 0.537255, 0.537255, 1 )
custom_fonts/font = ExtResource( 6 )
text = "inventory"
align = 1
uppercase = true

[node name="PlayerLabel" type="Label" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 443.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 5 )
text = "PLAYER_NAME"
script = ExtResource( 7 )

[node name="TitleLabel" type="Label" parent="."]
margin_left = 6.0
margin_top = 38.0
margin_right = 286.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.662745, 0.662745, 0.662745, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Stats & Inventory "
